fazendo pequenos ajustes

--- a/src/app/modules/portfolio/components/header/header.component.html
+++ b/src/app/modules/portfolio/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <img src="/assets/perfil.jpeg" alt="perfil" width="130px" height="130px" loading="eager">
+  <img src="/meu-portfolio/assets/perfil.jpeg" alt="perfil" width="130px" height="130px" loading="eager">
   <h1>Daniel Dias Araujo</h1>
 </header>
 
@@ -18,7 +18,7 @@
 
     <nav>
       <ul>
-        <li><a href="/assets/curriculo.pdf" target="_blank" class="btn btn-primary">
+        <li><a href="/meu-portfolio/assets/curriculo.pdf" target="_blank" class="btn btn-primary">
             Donwload CV
           </a>
         </li>
@@ -31,7 +31,7 @@
 
     <section>
       <figure>
-        <img src="/assets/icons/whatsapp.svg" alt="Icone do whatsapp" width="22px" height="24px">
+        <img src="/meu-portfolio/assets/icons/whatsapp.svg" alt="Icone do whatsapp" width="22px" height="24px">
         <figcaption>
           <a href="https://api.whatsapp.com/send?phone=+55+5585985810755&text=Ol%C3%A1%2C+preciso+de+um+job%21%F0%9F%9A%80" target="_blank"><strong>Envie uma mensagem para: </strong>
             <p>Whatsapp: 85 98581-0755</p>
@@ -40,7 +40,7 @@
       </figure>
 
       <figure>
-        <img src="/assets/icons/mail.svg" alt="Icone do Email" width="22px" height="24px">
+        <img src="/meu-portfolio/assets/icons/mail.svg" alt="Icone do Email" width="22px" height="24px">
         <figcaption>
           <a href="mailto:danieldias6946@gmail.com" target="_blank"><strong>Envie um e-mail para: </strong>
             <p>danieldias6946&#64;gmail.com</p>
